# nexus-core

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  PROJECTCONTEXT.md  README.md  build.rs
.github/workflows/: ci-release-gates.yml  release.yml
apps/nexus-desktop/: README.md
benchmarks/: scan_baseline_20260211_223813.json  scan_baseline_20260211_223813.txt
crates/nexus-cli/: Cargo.toml
crates/nexus-core/examples/: arp_monitoring.rs  passive_discovery.rs
crates/nexus-core/src/ai/: mod.rs  provider.rs  redaction.rs
crates/nexus-core/src/ai/providers/: gemini.rs  ollama.rs
crates/nexus-core/src/database/: connection.rs  encryption.rs  encryption_tests.rs  queries.rs
crates/nexus-core/src/exports/: json.rs  mod.rs  pdf.rs
crates/nexus-core/src/insights/: distribution.rs  recommendations.rs
crates/nexus-core/src/logging/: macros.rs  mod.rs
crates/nexus-core/src/monitor/: passive_integration.rs
crates/nexus-core/src/network/: device.rs  subnet.rs  vendor.rs
crates/nexus-core/src/scanner/: mod.rs  snmp.rs  tcp.rs
crates/nexus-core/src/scanner/passive/: mdns.rs
crates/nexus-engine/: Cargo.toml  build.rs
crates/nexus-engine/src/: app.rs  cli.rs  cli_adapter.rs  command.rs  command_handlers.rs
crates/nexus-engine/src/ai/: prompt.rs
crates/nexus-engine/src/ai/providers/: mod.rs
crates/nexus-engine/src/alerts/: detector.rs
crates/nexus-engine/src/database/: mod.rs  schema.rs
crates/nexus-engine/src/insights/: health.rs
crates/nexus-engine/src/monitor/: mod.rs
crates/nexus-engine/src/network/: mod.rs
crates/nexus-engine/src/scanner/passive/: arp.rs  mod.rs
crates/nexus-engine/tests/: alerts_dedupe_integration.rs
examples/: arp_monitoring.rs
scripts/: ai-check.ps1  benchmark.ps1  install-npcap-sdk.ps1  package.ps1  run-nexus.cmd
src/: app.rs  cli.rs  command_handlers.rs  config.rs  lib.rs  main.rs  models.rs  scan_workflow.rs
src/ai/: config.rs  mod.rs  router.rs  types.rs
src/alerts/: detector.rs  mod.rs  types.rs
src/database/: connection.rs  encryption.rs  models.rs  queries.rs  schema.rs  seed_cves.rs
src/exports/: csv.rs  json.rs  mod.rs  pdf.rs
src/insights/: ai.rs  mod.rs  security.rs  vulnerability_filter.rs
src/logging/: mod.rs
src/monitor/: events.rs  passive_integration.rs  watcher.rs
src/network/: device.rs  dns.rs  interface.rs  mod.rs  subnet.rs  subnet_tests.rs
src/scanner/: arp.rs  icmp.rs  mod.rs  snmp.rs  tcp.rs
src/scanner/passive/: arp.rs  mdns.rs
tests/: alerts_dedupe_integration.rs  app_dispatch_integration.rs
