[package]
name = "nexus-core"
version = "0.4.0-dev"
edition = "2021"
description = "NEXUS Core Engine — Network Discovery, Security Analysis, Health Monitoring & AI Intelligence (CLI)"
authors = ["Network Topology Mapper Team"]

[dependencies]
tokio = { version = "1", features = ["full", "process"] }
if-addrs = "0.13"
ipnetwork = "0.20"
surge-ping = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
pnet = "0.34"
pnet_datalink = "0.34"
snmp2 = { version = "0.4", features = ["tokio"] }
mac_oui = { version = "0.4", features = ["with-db"] }
dns-lookup = "2.0"
# Database
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Encryption (AES-256 for file encryption)
aes-gcm = "0.10"
machine-uid = "0.5"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
whoami = "1.5"
base64 = "0.22"

# Passive Discovery
mdns-sd = "0.11"

# Report Export
printpdf = "0.7"
csv = "1.3"
