[package]
name = "nexus-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "NEXUS Core Engine — Network Discovery, Security Analysis, Health Monitoring & AI Intelligence (Library)"
authors = ["Network Topology Mapper Team"]
autobins = false

[features]
default = []
pdf-export = ["dep:krilla"]

[dependencies]
tokio = { version = "1.49", features = ["full", "process"] }
if-addrs = "0.14"
ipnetwork = "0.20"
surge-ping = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.101"
pnet = "0.35"
pnet_datalink = "0.35"
snmp2 = { version = "0.4.14", features = ["tokio"] }
mac_oui = { version = "0.4.11", features = ["with-db"] }
dns-lookup = "3.0.1"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4.43", features = ["serde"] }
dirs = "6.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2.4"
aes-gcm = "0.10"
machine-uid = "0.5.4"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4.3"
whoami = "2.1"
base64 = "0.22.1"
mdns-sd = "0.17.2"
krilla = { version = "0.6.0", optional = true, default-features = false, features = ["simple-text"] }
csv = "1.4.0"

[dev-dependencies]
httpmock = "0.7"
